--- a/static/index.html
+++ b/static/index.html
@@ -53,10 +53,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#whitepaper">Whitepaper</a>
+                        <a class="page-scroll" href="#about">About </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="/whitepaper">Whitepaper</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -89,10 +92,22 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>The Blockfate Protocol</h2>
+                <p>
+                  Blockfate is a way for devices to monitor the Bitcoin Blockchain to establish access rights and payments information.  Device permissions
+                  exist as abstracted digital tokens which may be moved from one Bitcoin address to another.  By signing commands to devices with the
+                  private key controlling the access token, users cryptographically prove to devices that they are the legitimate owners. </p>
+                  <br><br>
+                  <p>Blockfate allows devices to:
+                    <ul>
+                      <li>Know with crpytographic certainty that they are receiving commands from their legitimate owner</li>
+                      <li>Have their ownership transferred digitally anywhere in the world with virtually no transaction costs</li>
+                      <li>Be rented out via Contracts to other addresses in exchange for bitcoin</li>
+                      <li>Monitor the Blockchain for payments and act accordingly.  Devices can be programmed to perform certain actions if any only if the appropriate payments are received.</li>
+                      <li>Devices can store money as a safety deposit and return it upon completion of terms.</li>
+                      <li>Trade access rights algorithmically with other devices.  Machine-Machine transactions become possible.</li>
+                    </ul>
+                  </p>
             </div>
         </div>
     </section>
@@ -102,44 +117,40 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                     <a href="/whitepaper">Check out the Whitepaper</a>
+                    <h2>The Whitepaper</h2>
+                    <p>Read out original conceptual paper.</p>
+                      <input type="button" onclick="window.location = 'http://www.blockfate.com/whitepaper'" class="btn btn-default btn-lg" value='Check out the Whitepaper' />
+                      <!-- <a href="/whitepaper">Check out the Whitepaper</a></button> -->
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="team" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                <h2>The Team</h2>
+                <div class="row">
+                  <div class="col-md-4 col-md-offset-1">
+                    <h3>Andrew Barisser</h3>
+                  </div>
+
+                  <div class="col-md-4 col-md-offset-1">
+                    <h3>Peter Paskowsky</h3>
+                  </div>
+
+                </div>
+
             </div>
         </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; BlockFate 2014</p>
         </div>
     </footer>
 
