--- a/static/index.html
+++ b/static/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
+
     <section id="team" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -134,10 +134,12 @@
                 <div class="row">
                   <div class="col-md-4 col-md-offset-1">
                     <h3>Andrew Barisser</h3>
+                     <img src="ab.jpg" style="width:304px;height:228px">
                   </div>
 
                   <div class="col-md-4 col-md-offset-1">
                     <h3>Peter Paskowsky</h3>
+                    <img src="pp.jpg" style="width:304px;height:228px">
                   </div>
 
                 </div>
@@ -145,6 +147,14 @@
             </div>
         </div>
     </section>
+
+   <section id="contact" class="container content-section text-center">
+     <div class="row">
+
+         <p>Contact us at barisser@gmail.com</p>
+       
+     </div>
+   </section>
 
 
     <!-- Footer -->
