--- a/static/index.html
+++ b/static/index.html
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>The Whitepaper</h2>
-                    <p>Read out original conceptual paper.</p>
+                    <p>Read our original conceptual paper.</p>
                       <input type="button" onclick="window.location = 'http://www.blockfate.com/whitepaper'" class="btn btn-default btn-lg" value='Check out the Whitepaper' />
                       <!-- <a href="/whitepaper">Check out the Whitepaper</a></button> -->
                 </div>
@@ -152,7 +152,7 @@
      <div class="row">
 
          <p>Contact us at barisser@gmail.com</p>
-       
+
      </div>
    </section>
 
